--- a/01-infrastructure/modules/04-iam/iam_policies/karpenter_controller-policy.json.tmpl
+++ b/01-infrastructure/modules/04-iam/iam_policies/karpenter_controller-policy.json.tmpl
@@ -25,6 +25,7 @@
     {
       "Effect": "Allow",
       "Action": [
+        "sqs:GetQueueUrl",
         "sqs:ReceiveMessage",
         "sqs:DeleteMessage",
         "sqs:GetQueueAttributes"
