--- a/01-infrastructure/modules/05-render/templates/helm-charts-values/karpenter-values.yaml.tmpl
+++ b/01-infrastructure/modules/05-render/templates/helm-charts-values/karpenter-values.yaml.tmpl
@@ -5,4 +5,4 @@ serviceAccount:
     eks.amazonaws.com/role-arn: ${karpenter-controller-role}
 settings:
   clusterName: ${cluster_name}
-  interruptionQueue: ${interruption_queue_url}
+  interruptionQueue: ${interruption_queue_name}
